# rust-restapi

./: Cargo.toml  Dockerfile  README.MD  other_main.txt
migrations/: 20230802092458_init.down.sql  20230802092458_init.up.sql
src/: jwt_auth.rs  logger.rs  main.rs  models.rs  response.rs  routes.rs
src/handlers/: resource.rs  user.rs  users_handler.rs
