[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"  
lto = true         
debug = false      
panic = "abort"   


[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
actix-web-validator = "5.0.1"
argon2 = "0.5.1"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
serde_valid = "0.16.3"
sqlx = { version = "0.7.1", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["phone", "card", "unic", "derive", "indexmap", "derive"] }
validator_derive = "0.16.0"
